k3s-deploy.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: moinmoin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moinmoin
  namespace: moinmoin
  labels:
    app: moinmoin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moinmoin
  template:
    metadata:
      labels:
        app: moinmoin
    spec:
      volumes:
        - name: moinmoin-vol
          persistentVolumeClaim:
            claimName: moinmoin-pvc
      containers:
      - name: moinmoin
        image: tianhua/moinwiki:20190516
        ports:
        - containerPort: 80
          name: web
        volumeMounts:
          - name: moinmoin-vol
            mountPath: /usr/local/share/moin
---
apiVersion: v1
kind: Service
metadata:
  name: moinmoin-lb
  labels:
    app: moinmoin
  namespace: moinmoin
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: moinmoin
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: moin-ing
  namespace: moinmoin
spec:
  rules:
  - host: udlr.xyz
    http:
      paths:
      - path: /
        backend:
          serviceName: moinmoin-lb
          servicePort: 80
